[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/messaging/notification.gd" type="Script" id=1]

[node name="Notification" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_message" type="Label" parent="Control"]
margin_left = 0.629959
margin_top = 218.87
margin_right = 99.63
margin_bottom = 232.87
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error_panel" type="Panel" parent="Control"]
margin_left = 138.753
margin_top = 98.272
margin_right = 376.753
margin_bottom = 159.272

[node name="Error_label" type="Label" parent="Control/Error_panel"]
margin_left = 25.0
margin_top = 16.0
margin_right = 65.0
margin_bottom = 30.0
align = 1
valign = 1
